# gmock-generator

./: .gitmodules  .travis.yml  CMakeLists.txt  MockWriter.cpp  MockWriter.hpp  README.md  clangparser.cpp  clangparser.hpp  config.hpp  generator.cpp  generator.hpp  gmockwriter.cpp  gmockwriter.hpp  main.cpp  types.hpp
cmake/modules/: ClangTidy.cmake  FindLibClang.cmake
docker/: Dockerfile
scripts/: docker_pull.sh  docker_run.sh
src/: CMakeLists.txt  clangparser.cpp  clangparser.hpp  clangparseroptions.hpp  config.cpp  config.hpp  fs.hpp  gmockwriter.cpp  gmockwriter.hpp  main.cpp  mockwriter.cpp  mockwriter.hpp  types.hpp
test_data/: C1.hpp  MissingInclude.hpp  MultipleNamespaces.hpp  MutlipleNamespaces.hpp  NoNamespace.hpp  NotificationBackendInterface.hpp  UniquePtr.hpp
test_data/expected/: C1Mock.hpp  MultipleNamespacesMock.hpp  NoNamespaceMock.hpp
tests/: CMakeLists.txt  generator_tests.cpp  gmock_generator_tests.cpp  parser_tests.cpp
