
add_library(fs INTERFACE)
if (APPLE) 
    find_package(Boost REQUIRED COMPONENTS filesystem)
    target_link_libraries(fs INTERFACE ${Boost_LIBRARIES})
    target_include_directories(fs INTERFACE ${Boost_INCLUDE_DIRS})
    target_compile_definitions(fs INTERFACE BOOST_FS)
else()
    target_link_libraries(fs INTERFACE stdc++fs)
    target_compile_definitions(fs INTERFACE STD_FS)
endif()

add_library(mg-core clangparser.cpp mockwriter.cpp config.cpp gmockwriter.cpp)
target_include_directories(mg-core PUBLIC ${CLANG_INCLUDE_DIRS} ${LLVM_INCLUDE_DIR} ${mstch_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(mg-core ${LIBCLANG_LIBRARIES} fmt fs)
set_target_properties(mg-core PROPERTIES COMPILE_FLAGS ${LIBCLANG_CXXFLAGS})

add_executable(mock-generator main.cpp)
target_include_directories(mock-generator PUBLIC ${CLANG_INCLUDE_DIRS} ${LLVM_INCLUDE_DIR} ${mstch_INCLUDE_DIR})
target_link_libraries(mock-generator cxxopts ${LIBCLANG_LIBRARIES} mg-core)
set_target_properties(mock-generator PROPERTIES COMPILE_FLAGS ${LIBCLANG_CXXFLAGS})
